--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,6 +1,11 @@
 <ion-header>
   <ion-toolbar color="primary">
-    <ion-buttons slot="secondary" (click)="userService.logout()" >
+    <ion-buttons slot="end" (click)="addPatient()"  >
+      <ion-button>
+        <ion-icon name="person-add"></ion-icon>
+      </ion-button>
+    </ion-buttons>
+    <ion-buttons slot="end" (click)="userService.logout()" >
       <ion-button>
         <ion-icon slot="icon-only" name="log-out"></ion-icon>
       </ion-button>
