--- a/src/app/pages/patient/patient.page.html
+++ b/src/app/pages/patient/patient.page.html
@@ -3,6 +3,11 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
+    <ion-buttons slot="end" (click)="editPatient()">
+      <ion-button>
+        <ion-icon name="create"></ion-icon>
+      </ion-button>
+    </ion-buttons>
     <ion-title>{{'PATIENT.PATIENT' | translate }}</ion-title>
   </ion-toolbar>
 </ion-header>
