--- a/src/app/pages/edit-patient/edit-patient.component.html
+++ b/src/app/pages/edit-patient/edit-patient.component.html
@@ -28,10 +28,10 @@
       <app-control-error-message [control]="patientForm['controls']['phone']"></app-control-error-message>
 
       <ion-item>
-        <ion-label position="stacked">{{'PATIENT.AGE' | translate }}</ion-label>
-        <ion-input formControlName="age" type="number"></ion-input>
+        <ion-label position="stacked">{{'PATIENT.DATE_OF_BIRTH' | translate }}</ion-label>
+        <ion-datetime formControlName="date_of_birth" display-format="DD/MMM/YYYY" picker-format="DD MMMM YYYY"></ion-datetime>
       </ion-item>
-      <app-control-error-message [control]="patientForm['controls']['age']"></app-control-error-message>
+      <app-control-error-message [control]="patientForm['controls']['date_of_birth']"></app-control-error-message>
 
       <ion-radio-group formControlName="gender">
         <ion-list-header>
@@ -49,6 +49,12 @@
         </ion-item>
         <app-control-error-message [control]="patientForm['controls']['gender']"></app-control-error-message>
       </ion-radio-group>
+
+      <ion-item>
+        <ion-label position="stacked">{{'PATIENT.ADDRESS' | translate }}</ion-label>
+        <ion-textarea formControlName="address"></ion-textarea>
+      </ion-item>
+      <app-control-error-message [control]="patientForm['controls']['address']"></app-control-error-message>
 
       <ion-item>
         <ion-label position="stacked">{{'PATIENT.DIAGNOSIS' | translate }}</ion-label>
