--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -1,6 +1,7 @@
 
 <ion-content padding>
    <ion-img src="assets/imgs/logo.png"></ion-img>
+   <h2><b>Virtual Worlds, Real Powers</b></h2>
   <form [formGroup]="loginForm">
     <ion-list>
       <ion-item>
