--- a/src/global.scss
+++ b/src/global.scss
@@ -13,3 +13,31 @@
 .error{
     color: red;
 }
+.empty-content {
+  .illustration-wrapper {
+    margin: 0px 10%;
+    text-align: center;
+    font-size: 50px;
+  }
+  
+  .empty-title {
+    text-align: center;
+    font-size: 20px;
+    font-weight: 500;
+  }
+
+  .empty-text {
+    text-align: center;
+    font-size: 22px;
+    margin-bottom: 20px;
+    font-weight: 500;
+  }
+
+  .go-home-btn {
+    margin: 23px;
+  }
+
+  ion-icon{
+    color: var(--ion-color-medium)
+  }
+}
