update stats component

--- a/src/app/pages/stats/stats.component.html
+++ b/src/app/pages/stats/stats.component.html
@@ -1,7 +1,7 @@
 
 <!-- <h1>Current Module: {{curModuleName}}</h1> -->
-<div *ngIf="validData.length">
-    <div *ngFor="let chart of chartsSettings" class="chart" style="height:300px; width:450px">    
+<div *ngIf="validData.length" class="container">
+    <div *ngFor="let chart of chartsSettings" class="chart">    
         <canvas id="{{chart.id}}"></canvas> 
         <!-- <p>&nbsp;</p> -->
     </div>
