--- a/src/app/pages/stats/stats.component.css
+++ b/src/app/pages/stats/stats.component.css
@@ -1,14 +1,17 @@
 div.chart {
-    width: 600px;
-    height: 300px;
+    width: 50%;
+    height: 20%;
+    margin: 0 auto;
+    margin-top: 1%;
+    display: flex;
 }
 
-/* .container {
+.container {
     display: flex;
     flex-wrap: nowrap;
     overflow-x: auto;
-} */
-
-.scroll-item {
-    flex: 0 0 auto;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    overflow: scroll;
 }
