--- a/src/app/pages/stats/stats.component.css
+++ b/src/app/pages/stats/stats.component.css
@@ -1,6 +1,6 @@
 div.chart {
-    width: 50%;
-    height: 20%;
+    width: 55%;
+    height: 15%;
     margin: 0 auto;
     margin-top: 1%;
     display: flex;
@@ -15,3 +15,13 @@ div.chart {
     height: 100%;
     overflow: scroll;
 }
+
+/* @media only screen and (min-width: 900px) {
+    div.chart { 
+        width: 350px;
+        height: 150px;
+        margin: 0 auto;
+        margin-top: 1%;
+        display: flex;
+    }
+} */
