--- a/src/app/pages/patient/patient.page.scss
+++ b/src/app/pages/patient/patient.page.scss
@@ -6,3 +6,17 @@ ion-card {
 ion-button {
     --border-width: 1px;
 }
+
+.running-mode {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+    font-size: 23px;
+    margin-bottom: 10px;
+}
+
+.headset-status {
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
+}
