Enhance offline mode mssages

--- a/src/app/pages/patient/patient.page.html
+++ b/src/app/pages/patient/patient.page.html
@@ -17,61 +17,67 @@
 </ion-header>
 
 <ion-content padding>
-  <div *ngIf="offlineMode" class='running-mode'>
-    <ion-icon color="medium" name="airplane"></ion-icon>
-    <ion-text color="primary">
-      Offline Mode
-    </ion-text>
-  </div>
-  <div *ngIf="!offlineMode" class='running-mode'>
-    <ion-icon color="success" name="wifi"></ion-icon>
-    <ion-text color="primary">
-      Online Mode
-    </ion-text>
-  </div>
-
-  <div *ngIf="offlineMode" class="headset-status">
-    <div *ngIf="headsetConnectedState == headsetStates.ready" >
-      <ion-icon color= "primary" name="checkmark-circle-outline"></ion-icon>
-      <ion-text color="primary">
-        The connected headset is ready.
-      </ion-text>
-    </div>
-    
-    <div *ngIf="headsetConnectedState == headsetStates.preparing" >
-      <ion-spinner></ion-spinner>
-      <ion-text color="primary">
-        We are preparing the connected headset now, please wait...
-      </ion-text>
-    </div>
-    
-    <div *ngIf="headsetConnectedState == headsetStates.unauthorized" >
-      <ion-icon color= "warning" name="alert"></ion-icon>
-      <ion-text color="warning">
-        The connected headset is not authorized!
-      </ion-text>
-    </div>
-    <div *ngIf="headsetConnectedState == headsetStates.not_ready" >
-      <ion-icon color= "warning" name="alert"></ion-icon>
-      <ion-text color="warning">
-        The connected headset is not ready, you can try to re-plug it.
-      </ion-text>
-    </div>
-
-    <div *ngIf="headsetsPrepared.length">
-      <ion-icon color="success" name="checkmark-circle-outline"></ion-icon>
-      <ion-text color="success">
-        You have some ready headsets, you are save to run a module now.
-      </ion-text>
-    </div>
-
-    <div *ngIf="!headsetsPrepared.length && !(headsetConnectedState == headsetStates.preparing)">
-      <ion-icon color= "danger" name="close-circle-outline"></ion-icon>
-      <ion-text color="danger">
-        You have no any headsets ready yet, Plug one through the USB first.
-      </ion-text>
-    </div>
-  </div>
+  <ion-card>
+    <ion-card-header>
+      <div *ngIf="offlineMode" class='running-mode'>
+        <ion-icon color="medium" name="airplane"></ion-icon>
+        <ion-text color="primary">
+          Offline Mode
+        </ion-text>
+      </div>
+      <div *ngIf="!offlineMode" class='running-mode'>
+        <ion-icon color="success" name="wifi"></ion-icon>
+        <ion-text color="primary">
+          Online Mode
+        </ion-text>
+      </div>
+    </ion-card-header>
+  
+    <ion-card-content>
+      <div *ngIf="offlineMode" class="headset-status">
+        <div *ngIf="headsetConnectedState == headsetStates.ready">
+          <ion-icon color="primary" name="checkmark-circle-outline"></ion-icon>
+          <ion-text color="primary">
+            The connected headset is ready.
+          </ion-text>
+        </div>
+        
+        <div *ngIf="headsetConnectedState == headsetStates.preparing">
+          <ion-spinner></ion-spinner>
+          <ion-text color="primary">
+            We are preparing the connected headset now, please wait...
+          </ion-text>
+        </div>
+        
+        <div *ngIf="headsetConnectedState == headsetStates.unauthorized">
+          <ion-icon color="warning" name="alert"></ion-icon>
+          <ion-text color="warning">
+            The connected headset is not authorized!
+          </ion-text>
+        </div>
+        <div *ngIf="headsetConnectedState == headsetStates.not_ready">
+          <ion-icon color="warning" name="alert"></ion-icon>
+          <ion-text color="warning">
+            The connected headset is not ready, you can try to re-plug it.
+          </ion-text>
+        </div>
+        
+        <div *ngIf="headsetsPrepared.length">
+          <ion-icon color="success" name="checkmark-circle-outline"></ion-icon>
+          <ion-text color="success">
+            You have some ready headsets, you are save to run a module now.
+          </ion-text>
+        </div>
+        
+        <div *ngIf="!headsetsPrepared.length && !(headsetConnectedState == headsetStates.preparing)">
+          <ion-icon color="danger" name="close-circle-outline"></ion-icon>
+          <ion-text color="danger">
+            You have no headsets ready yet, Plug the headset through the USB first.
+          </ion-text>
+        </div>
+      </div>
+    </ion-card-content>
+  </ion-card>
 
   <ion-card>
     <ion-card-header>
