Create new chinl window for console logs

--- a/src/app/pages/patient/patient.page.html
+++ b/src/app/pages/patient/patient.page.html
@@ -139,4 +139,8 @@
       </ion-row>
     </ion-grid>
   </ion-list>
+    <ion-button fill="clear" size="small" expand="block" color="dark"
+      (click)="toggleConsole()" >
+      Show/hide Console
+    </ion-button>
 </ion-content>
