--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -10,7 +10,7 @@
       </ion-item>
       <app-control-error-message [control]="loginForm['controls']['email']"></app-control-error-message>
 
-      <ion-item>
+      <ion-item (keyup.enter)="save()">
         <ion-label position="stacked">{{'LOGIN.PASSWORD' | translate }}</ion-label>
         <ion-input formControlName="password"  type="password"  ></ion-input>
       </ion-item>
