--- a/src/app/pages/charts/charts.component.html
+++ b/src/app/pages/charts/charts.component.html
@@ -11,7 +11,7 @@
     Sessions
   </h5>
   <ion-list class="sessions-list" *ngIf="sessions?.length" >
-    <ion-item *ngFor="let session of sessions" >
+    <ion-item *ngFor="let session of sessions" color="light">
       <ion-label (click)="getStatistics(session.id)" [ngClass]="{'selected': session.id == selectedSessionId}" >
         {{ session?.session_date }}
       </ion-label>
@@ -23,7 +23,6 @@
       </div>
       <div class="empty-text">No Sessions Available</div>
     </div>
-  <div>
+
     <app-stats *ngIf="showStats" [moduleId]= "moduleId" [allData]="sessionStatistics"></app-stats>
-  </div>
 </ion-content>
