--- a/src/app/pages/stats/stats.component.css
+++ b/src/app/pages/stats/stats.component.css
@@ -1,6 +1,6 @@
 div.chart {
-    width: 55%;
-    height: 15%;
+    width: 100%;
+    /* height: 100%; */
     margin: 0 auto;
     margin-top: 1%;
     display: flex;
@@ -9,16 +9,31 @@ div.chart {
 .container {
     display: flex;
     flex-wrap: nowrap;
-    overflow-x: auto;
     position: relative;
-    width: 100%;
-    height: 100%;
+    /* width: 100%; */
+    height: 90%;
+
+}
+
+ion-segment {
+    margin-bottom: 10px;
+}
+ion-item {
+    display: inline-block;
+    width: fit-content;
+}
+.mat-column-select {
+  overflow: initial;
+}
+
+.mat-table{
     overflow: scroll;
+    display: block;
 }
 
 @media only screen and (max-width: 900px) {
-    div.chart { 
+    /* div.chart { 
         width: 700px;
-        height: 550px;
-    }
+        height: 600px;
+    } */
 }
