--- a/src/app/pages/stats/stats.component.html
+++ b/src/app/pages/stats/stats.component.html
@@ -1,8 +1,50 @@
 
-<!-- <h1>Current Module: {{curModuleName}}</h1> -->
-<div *ngIf="validData.length" class="container">
-    <div *ngFor="let chart of chartsSettings" class="chart">    
-        <canvas id="{{chart.id}}"></canvas> 
+<ion-item *ngIf="selectedChartConfigs" color='secondary' size="small" slot="start">
+    <ion-label position="stacked">Chart</ion-label>
+    <ion-select
+     (ionChange)="rebuildChart()"
+     [(ngModel)]="selectedChart" interface="popover">
+        <ion-select-option *ngFor="let chart of chartsSettings" [value]="chart?.id">
+            {{chart?.legend}}
+        </ion-select-option>
+    </ion-select>
+</ion-item>
+<ion-item *ngIf="selectedChartConfigs" color='medium' size="small" slot="end">
+    <ion-label position="stacked"> Divide By</ion-label>
+    <ion-select (ionChange)="rebuildChart()"
+     [(ngModel)]="selectedChartConfigs.groupBy" interface="popover">
+        <ion-select-option *ngFor="let group of selectedChartConfigs?.canGroupBy" [value]="group">
+            {{group || 'None' }}
+        </ion-select-option>
+    </ion-select>
+</ion-item>
+<div class="empty-content" *ngIf="emptyChart">
+    <div class="illustration-wrapper">
+        <ion-icon name="analytics"></ion-icon>
+        <div class="empty-text">No Data Available For This Chart</div>
+    </div>
+</div>
+<div *ngIf="validData?.length" class="container">
+    <div class="chart">
+        <canvas [id]="selectedChart" ></canvas> 
         <!-- <p>&nbsp;</p> -->
     </div>
 </div>
+<table *ngIf="selectedChartConfigs" mat-table  matSort [dataSource] = "validData"  class="mat-elevation-z8">
+    <ng-container [matColumnDef]="field.key" *ngFor="let field of fieldsConfig  | keyvalue" >
+        <th mat-header-cell *matHeaderCellDef mat-sort-header >{{field.key.split('_').join(' ')}}</th>
+        <td mat-cell *matCellDef="let data"> {{(field.value == 'number') ? data[field.key].toFixed(2) : data[field.key]}} </td>
+    </ng-container>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    <!-- <thead>
+        <th *ngFor="let field of fieldsConfig  | keyvalue" >
+            {{field.key}}
+        </th>
+    </thead>
+    <tbody>
+        <tr *ngFor="let dataset of validData" > 
+            <td *ngFor="let field of fieldsConfig  | keyvalue"> {{dataset[field.key]}}</td>
+        </tr>
+    </tbody> -->
+</table>
