--- a/src/app/pages/stats/stats.component.html
+++ b/src/app/pages/stats/stats.component.html
@@ -30,21 +30,12 @@
         <!-- <p>&nbsp;</p> -->
     </div>
 </div>
-<table *ngIf="selectedChartConfigs" mat-table  matSort [dataSource] = "validData"  class="mat-elevation-z8">
+
+<table *ngIf="selectedChartConfigs" mat-table  matSort [dataSource]="sortedData" (matSortChange)="reSort($event)" class="mat-elevation-z8">
     <ng-container [matColumnDef]="field.key" *ngFor="let field of fieldsConfig  | keyvalue" >
         <th mat-header-cell *matHeaderCellDef mat-sort-header >{{field.key.split('_').join(' ')}}</th>
         <td mat-cell *matCellDef="let data"> {{(field.value == 'number') ? data[field.key].toFixed(2) : data[field.key]}} </td>
     </ng-container>
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    <!-- <thead>
-        <th *ngFor="let field of fieldsConfig  | keyvalue" >
-            {{field.key}}
-        </th>
-    </thead>
-    <tbody>
-        <tr *ngFor="let dataset of validData" > 
-            <td *ngFor="let field of fieldsConfig  | keyvalue"> {{dataset[field.key]}}</td>
-        </tr>
-    </tbody> -->
+    <tr mat-row *matRowDef="let sortedData; columns: displayedColumns;"></tr>
 </table>
