--- a/src/app/pages/charts/charts.component.html
+++ b/src/app/pages/charts/charts.component.html
@@ -24,5 +24,5 @@
       <div class="empty-text">No Sessions Available</div>
     </div>
 
-    <app-stats *ngIf="showStats" [moduleId]= "moduleId" [allData]="sessionStatistics"></app-stats>
+    <app-stats *ngIf="showStats" [moduleId]= "moduleId" [allData]="sessionStatistics" [sessionName]="selectedSessionDate"></app-stats>
 </ion-content>
