--- a/src/app/pages/stats/stats.component.html
+++ b/src/app/pages/stats/stats.component.html
@@ -50,3 +50,6 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let sortedData; columns: displayedColumns;"></tr>
 </table>
+<ion-button (click)="export()" color="secondary" fill="clear" size="small" *ngIf="selectedChartConfigs" >
+Export Excel
+</ion-button>
