--- a/src/app/pages/charts/charts.component.html
+++ b/src/app/pages/charts/charts.component.html
@@ -7,16 +7,18 @@
   </ion-toolbar>
 </ion-header>
 <ion-content padding>
-  <h5 class="selected">
-    Sessions
-  </h5>
-  <ion-list class="sessions-list" *ngIf="sessions?.length" >
-    <ion-item *ngFor="let session of sessions" color="light">
-      <ion-label (click)="getStatistics(session.id)" [ngClass]="{'selected': session.id == selectedSessionId}" >
-        {{ session?.session_date }}
-      </ion-label>
+
+  <ion-list class="sessions-list" no-padding>
+    <ion-item *ngIf="sessions?.length" color='secondary' size="small" slot="start">
+      <ion-label position="stacked">Session</ion-label>
+      <ion-select (ionChange)="getStatistics()" [(ngModel)]="selectedSession" interface="popover">
+        <ion-select-option *ngFor="let session of sessions" [value] = "session">
+          {{ session?.session_date }}
+        </ion-select-option>
+      </ion-select>
     </ion-item>
   </ion-list>
+
     <div class="empty-content" *ngIf="!sessions?.length">
       <div class="illustration-wrapper">
         <ion-icon name="analytics"></ion-icon>
@@ -24,5 +26,5 @@
       <div class="empty-text">No Sessions Available</div>
     </div>
 
-    <app-stats *ngIf="showStats" [moduleId]= "moduleId" [allData]="sessionStatistics" [sessionName]="selectedSessionDate"></app-stats>
+    <app-stats *ngIf="showStats" [moduleId]= "moduleId" [allData]="sessionStatistics" [sessionName]="selectedSession.session_date"></app-stats>
 </ion-content>
