--- a/src/app/pages/stats/stats.component.css
+++ b/src/app/pages/stats/stats.component.css
@@ -1,18 +1,14 @@
 div.chart {
-    width: 100%;
-    /* height: 100%; */
+    /* width: 74vw; */
+    /* height: 100vh; */
     margin: 0 auto;
-    margin-top: 1%;
     display: flex;
+    width: 140vh;
 }
 
-.container {
-    display: flex;
-    flex-wrap: nowrap;
-    position: relative;
-    /* width: 100%; */
-    height: 90%;
-
+.filters{
+    float: left;
+    width: fit-content;
 }
 
 ion-segment {
@@ -30,8 +26,9 @@ ion-item {
 }
 
 .mat-table{
-    /* overflow: scroll; */
+    overflow-x: scroll;
     display: block;
+    width: 100%;
 }
 
 .mat-header-cell {
@@ -39,7 +36,7 @@ ion-item {
 }
 
 th {
-    background-color: var(--ion-color-secondary);
+    background-color: var(--ion-color-primary);
 }
 
 @media only screen and (max-width: 900px) {
