Send all server logs to ConsoleWindow

--- a/src/app/pages/patient/patient.page.html
+++ b/src/app/pages/patient/patient.page.html
@@ -139,7 +139,7 @@
       </ion-row>
     </ion-grid>
   </ion-list>
-    <ion-button fill="clear" size="small" expand="block" color="dark"
+    <ion-button expand="block" color="dark" fill="clear"
       (click)="toggleConsole()" >
       Show/hide Console
     </ion-button>
