--- a/src/assets/views/console.html
+++ b/src/assets/views/console.html
@@ -11,11 +11,14 @@
             }
 
             #console-body{
-                color: green;
-                line-height: 1px;
+                color: turquoise;
                 font-family: monospace;
-                letter-spacing: 2px;
+                letter-spacing: 1.3px;
                 padding-bottom: 20%;
+                font-size: 11px;
+            }
+            span {
+                color: ivory;
             }
         </style>
         <script src="../js/console.js"></script>
