--- a/src/assets/views/console.html
+++ b/src/assets/views/console.html
@@ -15,7 +15,8 @@
                 font-family: monospace;
                 letter-spacing: 1.3px;
                 padding-bottom: 20%;
-                font-size: 11px;
+                font-size: 12px;
+                line-height: 1.5;
             }
             span {
                 color: ivory;
